--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Download</title>
+</head>
+<body>
+    <h2>This website's main page is not complete.</h2>
+    <a href="/download/brushes/">Procreate brushes download</a>
+</body>
+</html>
