--- a/brushes/index.html
+++ b/brushes/index.html
@@ -6,6 +6,6 @@
 <body>
     <h2>Download our Procreate brushes for free</h2>
     <input type="button" value="Calligraphy Shadow Gradient download">
-    <a href="path_to_file" download="proposed_file_name">Calligraphy Shadow Gradient download</a>
+    <a href="Siuozl Calligraphy Brush.brush" download="Download">Calligraphy Shadow Gradient</a>
 </body>
 </html>
