--- a/brushes/index.html
+++ b/brushes/index.html
@@ -7,5 +7,6 @@
     <h2>Download our Procreate brushes for free</h2>
     <input type="button" value="Calligraphy Shadow Gradient download">
     <a href="Siuozl Calligraphy Brush.brush">Calligraphy Shadow Gradient</a>
+    <a href="Siuozl Calligraphy Brush.brush">Calligraphy Shadow Gradient</a>
 </body>
 </html>
