--- a/brushes/index.html
+++ b/brushes/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <title>Siuozl Procreate Brushes</title>
+    <style>
+        a{
+            padding: 20%;
+        }
+        a:hover{
+            background-color: gray;
+        }
+    </style>
 </head>
 <body>
     <h2>Download our Procreate brushes for free</h2>
