--- a/brushes/index.html
+++ b/brushes/index.html
@@ -4,10 +4,11 @@
     <title>Siuozl Procreate Brushes</title>
     <style>
         a{
-            padding: 5%;
+            padding: 2%;
+            background-color: rgba(128, 128, 128, 0.315);
         }
         a:hover{
-            background-color: gray;
+            background-color: rgba(128, 128, 128, 0.678);
         }
     </style>
 </head>
