--- a/brushes/index.html
+++ b/brushes/index.html
@@ -6,6 +6,8 @@
         a{
             padding: 2%;
             background-color: rgba(128, 128, 128, 0.315);
+            color: black;
+            font-style: normal;
         }
         a:hover{
             background-color: rgba(128, 128, 128, 0.678);
