--- a/brushes/index.html
+++ b/brushes/index.html
@@ -7,7 +7,7 @@
             padding: 2%;
             background-color: rgba(128, 128, 128, 0.315);
             color: black;
-            font-style: normal;
+            text-decoration: none;
         }
         a:hover{
             background-color: rgba(128, 128, 128, 0.678);
