--- a/brushes/index.html
+++ b/brushes/index.html
@@ -5,6 +5,8 @@
     <style>
         a{
             padding: 2%;
+            padding-top: 1%;
+            padding-bottom: 1%;
             background-color: rgba(128, 128, 128, 0.315);
             color: black;
             text-decoration: none;
