--- a/brushes/index.html
+++ b/brushes/index.html
@@ -5,8 +5,6 @@
     <style>
         a{
             padding: 2%;
-            padding-top: 1%;
-            padding-bottom: 1%;
             background-color: rgba(128, 128, 128, 0.315);
             color: black;
             text-decoration: none;
@@ -21,7 +19,7 @@
     <a href="Siuozl Calligraphy Brush.brush">Calligraphy Shadow Gradient</a>
     <a href="Braid brush (outline) from ibisPaint (as procreate brush).brush">ibisPaint Braid brush (outline) for Procreate</a>
     <a href="3D_Brush.brush">3d brush (smudge & draw)</a>
-<br>
+<br style="padding: 2%;">
     <a href="3D calligraphy.brush">3d calligraphy brush (two colors)</a>
 </body>
 </html>
