--- a/brushes/index.html
+++ b/brushes/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
     <h2>Download our Procreate brushes for free</h2>
-    <a href="Siuozl Calligraphy Brush.brush">Calligraphy Shadow Gradient</a>
+    <div>
+        <a href="Siuozl Calligraphy Brush.brush">Calligraphy Shadow Gradient</a>
+    </div>
     <a href="Braid brush (outline) from ibisPaint (as procreate brush).brush">ibisPaint Braid brush (outline) for Procreate</a>
     <a href="3D_Brush.brush">3d brush (smudge & draw)</a>
     <a href="3D calligraphy.brush">3d calligraphy brush (two colors)</a>
