--- a/brushes/index.html
+++ b/brushes/index.html
@@ -18,6 +18,7 @@
     <h2>Download our Procreate brushes for free</h2>
     <div>
         <a href="Siuozl Calligraphy Brush.brush">Calligraphy Shadow Gradient</a>
+        <img src="Siuozl Calligraphy Brush.brush" alt="">
     </div>
     <a href="Braid brush (outline) from ibisPaint (as procreate brush).brush">ibisPaint Braid brush (outline) for Procreate</a>
     <a href="3D_Brush.brush">3d brush (smudge & draw)</a>
