--- a/brushes/index.html
+++ b/brushes/index.html
@@ -3,13 +3,13 @@
 <head>
     <title>Siuozl Procreate Brushes</title>
     <style>
-        a{
+        div{
             padding: 2%;
             background-color: rgba(128, 128, 128, 0.315);
             color: black;
             text-decoration: none;
         }
-        a:hover{
+        div:hover{
             background-color: rgba(128, 128, 128, 0.678);
         }
     </style>
@@ -18,7 +18,7 @@
     <h2>Download our Procreate brushes for free</h2>
     <div>
         <a href="Siuozl Calligraphy Brush.brush">Calligraphy Shadow Gradient</a>
-        <img src="Siuozl Calligraphy Brush.png" alt="">
+        <img src="Siuozl Calligraphy Brush.png" alt="Example" style="size: 5%">
     </div>
     <a href="Braid brush (outline) from ibisPaint (as procreate brush).brush">ibisPaint Braid brush (outline) for Procreate</a>
     <a href="3D_Brush.brush">3d brush (smudge & draw)</a>
