--- a/brushes/index.html
+++ b/brushes/index.html
@@ -12,13 +12,17 @@
         div:hover{
             background-color: rgba(128, 128, 128, 0.678);
         }
+        img{
+            width: 5%;
+            height: 5%;
+        }
     </style>
 </head>
 <body>
     <h2>Download our Procreate brushes for free</h2>
     <div>
         <a href="Siuozl Calligraphy Brush.brush">Calligraphy Shadow Gradient</a>
-        <img src="Siuozl Calligraphy Brush.png" alt="Example" style="size: 5%">
+        <img src="Siuozl Calligraphy Brush.png" alt="Example">
     </div>
     <a href="Braid brush (outline) from ibisPaint (as procreate brush).brush">ibisPaint Braid brush (outline) for Procreate</a>
     <a href="3D_Brush.brush">3d brush (smudge & draw)</a>
