--- a/brushes/index.html
+++ b/brushes/index.html
@@ -24,8 +24,14 @@
         <a href="Siuozl Calligraphy Brush.brush">Calligraphy Shadow Gradient</a>
         <img src="Siuozl Calligraphy Brush.png" alt="Example">
     </div>
-    <a href="Braid brush (outline) from ibisPaint (as procreate brush).brush">ibisPaint Braid brush (outline) for Procreate</a>
-    <a href="3D_Brush.brush">3d brush (smudge & draw)</a>
-    <a href="3D calligraphy.brush">3d calligraphy brush (two colors)</a>
+    <div>
+        <a href="Braid brush (outline) from ibisPaint (as procreate brush).brush">ibisPaint Braid brush (outline) for Procreate</a>
+    </div>
+    <div>
+        <a href="3D_Brush.brush">3d brush (smudge & draw)</a>
+    </div>
+    <div>
+        <a href="3D calligraphy.brush">3d calligraphy brush (two colors)</a>
+    </div>
 </body>
 </html>
